<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">慧健体育</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title1">首页</string>
    <string name="title2">专家</string>
    <string name="title3">我的</string>
    <string name="index_string1">找专家</string>
    <string name="index_string2">慧健网--智慧健康 专家助力</string>
    <string name="index_string3">专家</string>
    <string name="index_s_string1">健身处方</string>
    <string name="index_s_string2">视频</string>
    <string name="index_s_string3">课堂</string>
    <string name="index_s_string4">资讯</string>
    <string name="index_tiwen_string1">快速提问</string>
    <string name="index_tiwen_string2">查找知名专家，咨询解答</string>
    <string name="index_tiwen_item_expert">专家回复：</string>
    <string name="index_shipin_item_time">开课时间</string>
    <string name="quiz_title">快速提问</string>
    <string name="video_string1">评论</string>
    <string name="video_string2">提问</string>
    <string name="video_button_string">发表评论</string>
    <string name="video_pinglun_bottom">0/300</string>
    <string name="login_title">悦健体育网</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="quick_login">快速登录</string>
    <string name="username">今天有雨</string>
    <string name="modify_data">修改资料</string>
    <string name="integral">我的积分</string>
    <string name="message">留言</string>
    <string name="body_data">身体数据</string>
    <string name="qusition">提问</string>
    <string name="reservation">我的预约</string>
    <string name="course_infomation">课程信息</string>
    <string name="input_phonenumber">请输入手机号码</string>
    <string name="input_valid">请输入验证码</string>
    <string name="set_newpassword">设置新密码（至少6位数）</string>
    <string name="agree_consent">绑定后意味同意悦健体育的</string>
    <string name="service_agreement">《服务协议》</string>
    <string name="send_verification">发送验证码</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="data_modification">资料修改</string>
    <string name="preservation">保存</string>
    <string name="change_headimage">更换头像</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="phonenumber">手机号</string>
    <string name="bind_phonenumber">请绑定手机号</string>
    <string name="sex">性别</string>
    <string name="city">所在城市</string>
    <string name="autograph">签名</string>
    <string name="question">提问</string>
    <string name="MyPoint">我的积分</string>
    <string name="current_integral">当前积分</string>
    <string name="integration_details">积分明细</string>
    <string name="my_reservation">我的预约</string>

    <string name="title_activity_fullscreen_video">FullscreenVideo</string>

</resources>
