<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a.app10.Activity.Main1Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_newpassword_title">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="#ffffffff"
            />
        <!--android:src="@drawable/get_into"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registe"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFC7C7CB"
        android:layout_below="@+id/set_newpassword_title"
        android:id="@+id/first_divid"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phonenumber"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/input_phontnumber"
        android:background="@null"
        android:layout_below="@+id/first_divid"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFC7C7CB"
        android:layout_below="@+id/input_phontnumber"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/second_divid"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_valid"
        android:layout_below="@id/second_divid"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/input_verification"
        android:background="@null"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_divid"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:layout_toRightOf="@+id/input_verification"
        android:text="@string/send_verification"
        android:textColor="@color/textGreen"
        android:id="@+id/send_verification"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFC7C7CB"
        android:layout_below="@+id/input_verification"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/third_divid"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_newpassword"
        android:layout_below="@+id/input_verification"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/input_newpassword"
        android:background="@null"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFC7C7CB"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/input_newpassword"
        android:id="@+id/fouth_divid"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_newpassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/registe"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/bu_login_set_newpwd"
        android:background="@drawable/buttonbackground"
        android:layout_marginTop="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bu_login_set_newpwd"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_consent"
            android:id="@+id/agree_consent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_agreement"
            android:id="@+id/service_agreement"
            android:textColor="@color/textGreen"/>
    </LinearLayout>
</RelativeLayout>
