<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a.app10.Activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="40sp"
        android:typeface="sans"
        android:textColor="@color/textGreen"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:id="@+id/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/logined"
        android:layout_below="@+id/title"
        android:id="@+id/ed_login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/logined"
        android:layout_below="@+id/ed_login"
        android:id="@+id/edpwd"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:textColor="@color/textGreen"
        android:layout_below="@+id/edpwd"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:id="@+id/forget_pwd"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/forget_pwd"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="#ffffff"
        android:background="@drawable/buttonbackground"
        android:id="@+id/bu_login"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/forget_pwd"
        android:text="@string/registe"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textColor="#ffffff"
        android:background="@drawable/buttonbackground"
        android:layout_toRightOf="@+id/bu_login"
        android:id="@+id/bu_reg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bu_reg"
        android:text="@string/quick_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/quick_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quick_login"
        android:id="@+id/modify_data"
        android:text=""/>

</RelativeLayout>
