<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a.app10.Activity.Main1Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_image"/>
    <!--android:background="@drawable/back_image"-->
    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/cog"/>
    <!--android:background="@drawable/cog"-->
    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/speech_bubbles"/>
    <!--android:background="@drawable/speech_bubbles"-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/head_image"
        android:id="@+id/head_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/username"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/head_image"
        android:id="@+id/username"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginLeft="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_data"
            android:textColor="@color/modifyDataColor"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:textSize="10sp"
            android:id="@+id/modify_data"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/modify_data"
            android:layout_below="@+id/username"
            android:layout_gravity="center_vertical"
            />
        <!--android:background="@drawable/edit"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_image"
        android:layout_marginTop="20dp"
        android:id="@+id/four_option">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/back_image"
                android:id="@+id/integral" />
            <!--android:src="@drawable/integral"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/integral" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/back_image"
                android:layout_toRightOf="@+id/integral"
                android:id="@+id/message"/>
            <!--android:src="@drawable/integral"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/message"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/back_image"
                android:layout_toRightOf="@+id/message"
                android:id="@+id/body_data"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/body_data"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/back_image"
                android:layout_toRightOf="@+id/body_data"
                android:id="@+id/question"/>
            <!--android:src="@drawable/integral"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/qusition"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four_option"
        android:layout_marginTop="40dp"
        android:id="@+id/reservation">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reservation"
        android:layout_marginTop="40dp"
        android:id="@+id/course_infomation">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_infomation" />
    </LinearLayout>
</RelativeLayout>
